--- a/CriacaoTurmas/View/MainWindow.xaml
+++ b/CriacaoTurmas/View/MainWindow.xaml
@@ -6,18 +6,19 @@
         xmlns:local="clr-namespace:CriacaoTurmas.View"
         mc:Ignorable="d"
         Title="Início" Height="450" Width="800">
-    <Grid x:Name="gridPrincipal">
-        <Menu Height="35"  VerticalAlignment="Bottom" Margin="160,0,507,266">
-            <MenuItem Header="Cadastrar" HorizontalAlignment="Right" Height="35" Width="107"  FontSize="12">
-                <MenuItem Header="Aluno" HorizontalAlignment="Left" Height="35" Width="158" Click="MenuItem_Click"/>
-                <MenuItem Header="Professor" HorizontalAlignment="Left" Height="45" Width="160" Margin="0,0,-1,0" Click="MenuItem_Click1"/>
-                <MenuItem Header="Turma" HorizontalAlignment="Left" Height="45" Width="167" Margin="0,0,-8,0" Click="MenuItem_Click2"/>
-            </MenuItem>
-        </Menu>
-        <Menu Height="35"  VerticalAlignment="Bottom" Margin="370,0,297,266">
-            <MenuItem Header="Ver" HorizontalAlignment="Right" Height="35" Width="107"  FontSize="12">
-                <MenuItem Header="Aluno" HorizontalAlignment="Left" Height="35" Width="158" Click="MenuItem_Click3"/>
-            </MenuItem>
-        </Menu>
+    <Grid x:Name="gridPrincipal" Background="Azure">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="169*"/>
+            <RowDefinition Height="250*"/>
+        </Grid.RowDefinitions>
+        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="274" Margin="378,53,0,0" VerticalAlignment="Top" Width="164" Grid.RowSpan="2"/>
+        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="274" Margin="164,53,0,0" VerticalAlignment="Top" Width="214" Grid.RowSpan="2"/>
+        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="78" Margin="164,53,0,0" VerticalAlignment="Top" Width="378"/>
+        <Button Content="Aluno" HorizontalAlignment="Left" Width="82" Margin="232,162,0,224" Click="MenuItem_Click" Grid.RowSpan="2"/>
+        <Button Content="Professor" HorizontalAlignment="Left" Width="82" Margin="232,41,0,176" Click="MenuItem_Click1" Grid.Row="1"/>
+        <Button Content="Turma" HorizontalAlignment="Left" Width="82" Margin="232,89,0,128" Click="MenuItem_Click2" Grid.Row="1"/>
+        <Button Content="Aluno" HorizontalAlignment="Left" Width="82" Margin="416,40,0,177" Click="MenuItem_Click3" Grid.Row="1"/>
+        <Label Content="Cadastros" HorizontalAlignment="Center" Margin="231,74,459,0" VerticalAlignment="Top" Width="102" Height="34" FontSize="18"/>
+        <Label Content="Listagem" HorizontalAlignment="Center" Margin="414,74,276,0" VerticalAlignment="Top" Width="102" Height="34" FontSize="18"/>
     </Grid>
 </Window>
