--- a/CriacaoTurmas/View/Login.xaml
+++ b/CriacaoTurmas/View/Login.xaml
@@ -1,12 +1,21 @@
-﻿<Window x:Class="CriacaoTurmas.View.Login"
+﻿<Window x:Class="CriacaoTurmas.View.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CriacaoTurmas.View"
         mc:Ignorable="d"
-        Title="Login" Height="300" Width="300">
-    <Grid>
-        
+        Title="Início" Height="385.5" Width="566.315">
+    <Grid x:Name="gridPrincipal" Background="Azure" Margin="0,0,2,-5">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="169*"/>
+            <RowDefinition Height="250*"/>
+        </Grid.RowDefinitions>
+        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="274" Margin="177,48,0,0" VerticalAlignment="Top" Width="214" Grid.RowSpan="2">
+            <Button x:Name="btnlogin" Content="Entrar" Margin="159,238,9,9"/>
+        </Border>
+        <Label Content="Login:" HorizontalAlignment="Center" Margin="239,81,215,0" VerticalAlignment="Top" Width="102" Height="34" FontSize="18"/>
+        <Label x:Name="login" Content="Login:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="177,0,0,0" Grid.Row="1"/>
+        <Label x:Name="senha" Content="Senha:" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="177,0,0,144" Grid.Row="1"/>
     </Grid>
 </Window>
