--- a/CriacaoTurmas/View/CadastAluno.xaml
+++ b/CriacaoTurmas/View/CadastAluno.xaml
@@ -1,5 +1,6 @@
 ﻿<Window x:Class="CriacaoTurmas.View.CadastAluno"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        WindowStartupLocation = "CenterScreen"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -7,11 +8,11 @@
         mc:Ignorable="d"
         Title="Cadastro de Alunos" Height="368" Width="364">
     <Grid Margin="0,0,2,1" Background="Azure">
-        <Button x:Name="btnCadastrar" Content="Cadastrar" HorizontalAlignment="Left" Margin="174,219,0,0" VerticalAlignment="Top" Width="83" Click="btnCadastrar_Click" Height="30"/>
-        <TextBox x:Name="txtNome" HorizontalAlignment="Left" Height="23" Margin="120,110,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <Label Content="Nome:" HorizontalAlignment="Left" Margin="27,110,0,0" VerticalAlignment="Top" Height="23" Width="57"/>
         <Label Content="Aluno" HorizontalAlignment="Center" Margin="112,39,42,0" VerticalAlignment="Top" Height="25" Width="130"/>
-        <TextBox x:Name="txtFone" HorizontalAlignment="Left" Height="23" Margin="120,138,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <Label Content="Telefone:" HorizontalAlignment="Left" Margin="27,138,0,0" VerticalAlignment="Top" Height="23" Width="57"/>
+        <TextBox x:Name="txtNome" HorizontalAlignment="Left" Height="23" Margin="120,110,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="txtFone" HorizontalAlignment="Left" Height="23" Margin="120,138,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Button x:Name="btnCadastrar" Content="Cadastrar" HorizontalAlignment="Left" Margin="174,219,0,0" VerticalAlignment="Top" Width="83" Click="btnCadastrar_Click" Height="30"/>
     </Grid>
 </Window>
