--- a/CriacaoTurmas/View/CadastTurma.xaml
+++ b/CriacaoTurmas/View/CadastTurma.xaml
@@ -1,6 +1,7 @@
 ﻿<Window x:Class="CriacaoTurmas.View.CadastTurma"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        WindowStartupLocation = "CenterScreen"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CriacaoTurmas.View"
@@ -17,12 +18,9 @@
                 </TransformGroup>
             </Label.RenderTransform>
         </Label>
-        <Button x:Name="btnCadastrar" Content="Cadastrar" HorizontalAlignment="Left" Margin="260,291,0,0" VerticalAlignment="Top" Width="83" Click="btnCadastrar_Click" Height="30"/>
-        <TextBox x:Name="txtNome" HorizontalAlignment="Left" Height="23" Margin="140,261,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="158"/>
         <Label Content="Nome da turma:" HorizontalAlignment="Left" Margin="10,259,0,0" VerticalAlignment="Top" Height="23" Width="101"/>
         <Label Content="Turma" HorizontalAlignment="Center" Margin="144,29,80,0" VerticalAlignment="Top" Height="25" Width="130"/>
         <Label Content="Selecione o Professor:" HorizontalAlignment="Left" Margin="8,224,0,0" VerticalAlignment="Top" Width="131"/>
-        <ComboBox x:Name="cboProfessor" HorizontalAlignment="Left" Margin="144,228,0,0" VerticalAlignment="Top" Width="154" ItemsSource="{Binding}"/>
         <ListBox x:Name="lbxAlunos" HorizontalAlignment="Left" Height="139" Margin="10,77,0,0" VerticalAlignment="Top" Width="318" AutomationProperties.ItemType="Aluno" SelectionMode="Multiple">
             <ListBox.ItemTemplate>
                 <DataTemplate>
@@ -32,5 +30,8 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
+        <ComboBox x:Name="cboProfessor" HorizontalAlignment="Left" Margin="144,228,0,0" VerticalAlignment="Top" Width="154" ItemsSource="{Binding}"/>
+        <TextBox x:Name="txtNome" HorizontalAlignment="Left" Height="23" Margin="140,261,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="158"/>
+        <Button x:Name="btnCadastrar" Content="Cadastrar" HorizontalAlignment="Left" Margin="260,291,0,0" VerticalAlignment="Top" Width="83" Click="btnCadastrar_Click" Height="30"/>
     </Grid>
 </Window>
