--- a/CriacaoTurmas/View/MainWindow.xaml
+++ b/CriacaoTurmas/View/MainWindow.xaml
@@ -1,6 +1,7 @@
 ﻿<Window x:Class="CriacaoTurmas.View.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        WindowStartupLocation = "CenterScreen"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CriacaoTurmas.View"
@@ -17,7 +18,7 @@
         <Button Content="Aluno" HorizontalAlignment="Left" Width="82" Margin="232,162,0,224" Click="MenuItem_Click" Grid.RowSpan="2"/>
         <Button Content="Professor" HorizontalAlignment="Left" Width="82" Margin="232,41,0,176" Click="MenuItem_Click1" Grid.Row="1"/>
         <Button Content="Turma" HorizontalAlignment="Left" Width="82" Margin="232,89,0,128" Click="MenuItem_Click2" Grid.Row="1"/>
-        <Button Content="Aluno" HorizontalAlignment="Left" Width="82" Margin="416,40,0,177" Click="MenuItem_Click3" Grid.Row="1"/>
+        <Button Content="Aluno" HorizontalAlignment="Left" Width="82" Margin="416,44,0,173" Click="MenuItem_Click3" Grid.Row="1"/>
         <Label Content="Cadastros" HorizontalAlignment="Center" Margin="233,74,368,0" VerticalAlignment="Top" Width="102" Height="34" FontSize="18"/>
         <Label Content="Listagem" HorizontalAlignment="Center" Margin="416,74,190,0" VerticalAlignment="Top" Width="102" Height="34" FontSize="18"/>
     </Grid>
